--- a/app/Views/user/login.twig
+++ b/app/Views/user/login.twig
@@ -8,6 +8,11 @@
 #}
 {% extends 'templates/layout.twig' %}
 {% block content %}
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Bienvenu sur votre CRM</h1>
+        </div>
+    </section>
     <div class="row">
         <div class="col-lg-6">
             <!-- Default form login -->
